--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -4,8 +4,8 @@
   align-items: center;
 
   height: 12.5em;
-  background: #e1e1e1;
+  background: #fff;
   margin: -1em -2.5em 1em;
   font-size: 2em
-  
+
 }
