--- a/src/pages/blog.module.css
+++ b/src/pages/blog.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 61.8vh;
-  background: #fff;
+  background: #FFF;
   font-size: 2em;
   overflow: hidden;
   text-align: center;
