--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -15,9 +15,11 @@ body {
   margin: 0;
 }
 
-img {
+img {  // Bilder in den Blogposts
   display: block;
-  width: 50%;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1,
