--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -46,7 +46,7 @@ a {
   margin: 0;
   padding: 0;
   list-style: none;
-  display: grid;
+  display: inline-block;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 5vmin;
 }
