--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -13,6 +13,8 @@ body {
   color: #373F49;
   background: #FFF;
   margin: 0;
+  display: inline-block;
+
 }
 
 img {
@@ -46,7 +48,7 @@ a {
   margin: 0;
   padding: 0;
   list-style: none;
-  display: inline-block;
+  display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 5vmin;
 }
