--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -16,8 +16,8 @@ body {
 }
 
 img {
-  display: block;
-  width: 75%;
+  display: inline-block;
+  width: 100%;
   margin: auto;
   border-radius: 8px;
 }
