--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -17,8 +17,8 @@ body {
 
 img {
   display: inline-block;
-  width: 100%;
-  margin: auto;
+  width: 75%;
+  margin: 0;
   border-radius: 8px;
 }
 
