--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -13,6 +13,7 @@ body {
   color: #373F49;
   background: #FFF;
   margin: 0;
+  width: 50%;
 }
 
 img {
@@ -34,7 +35,7 @@ a {
 }
 
 .wrapper {
-  width: 50%;
+  width: calc(100% - 10vmin);
   margin: 0 auto;
   padding: 5vmin 0;
 }
