--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -1,7 +1,7 @@
 .hero {
   position: relative;
   background: #fff;
-  color: #000;
+  color: #f47742;
   text-align: center;
 }
 
@@ -20,7 +20,7 @@
   left: 50%;
   bottom: 0;
   transform: translate(-50%, 0);
-  font-size: 14px;
+  font-size: 20px;
   padding: 0 0.5em;
 }
 
