--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -1,7 +1,7 @@
 .hero {
+  padding-top: 20px;
   position: relative;
   background: #fff;
-  color: #fff;
   text-align: center;
 }
 
@@ -16,23 +16,23 @@
 
 .heroDetails {
   position: absolute;
-  background: rgb(255, 255, 255, 0.2);
+  background: rgb(255, 255, 255, 0.4);
   left: 50%;
   bottom: 0;
   transform: translate(-50%, 0);
-  font-size: 20px;
+  font-size: 30px;
   padding: 0 0.5em;
 }
 
 @media(min-width: 600px) {
   .heroDetails {
-    font-size: 16px;
+    font-size: 25px;
   }
 }
 
 @media(min-width: 1000px) {
   .heroDetails {
-    font-size: 20px;
+    font-size: 40px;
   }
 }
 
