--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -17,10 +17,19 @@ body {
 
 img {
   display: inline-block;
-  width: 120%;
+  width: 100%;
   margin: 0;
   border-radius: 8px;
 }
+
+#imgBF {
+  width: 25%;
+  height: 25%;
+  position: relative;
+  left: 75%;
+}
+
+
 
 h1,
 h2,
