--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -10,7 +10,8 @@
       Ensure golden ratio for the hero size while limiting it to some extend to
       the viewport width
     */
-    height: 100%;
+    height: 61.8vh;
+    max-height: 400px;
 }
 
 .heroDetails {
