--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -1,9 +1,10 @@
 .navigation {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     list-style: none;
     padding: 0;
     margin: 0;
+    margin-top: 30px;
     height: 20vh;
     max-height: 100px;
     font-size: 1.25em;
