--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -23,10 +23,14 @@ img {
 }
 
 h1,
-h2,
-h3 {
+h2 {
     font-size: 2em;
     font-weight: normal;
+}
+
+h3 {
+    font-size: 1em;
+    font-weight: bold;
 }
 
 a {
