--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: "Avenir", Tahoma, Arial, Helvetica, sans-serif;
+    font-family: "Avenir", Tahoma, Arial, Helvetica, sasns-serif;
     font-size: 1em;
     line-height: 1.65;
     color: #373F49;
@@ -64,6 +64,8 @@ a {
     padding: 0 0 0.4em 0;
     margin: 0 0 5vmin 0;
     border-bottom: 1px solid #ddd;
+    color: #3D5B80;
+    font-weight: bold;
 }
 
 
