--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -16,9 +16,9 @@
 
 .heroDetails {
     position: absolute;
-    background: rgb(255, 255, 255, 0.4);
+    background: rgb(255, 255, 255, 0.9);
     left: 50%;
-    bottom: 0;
+    bottom: 30%;
     transform: translate(-50%, 0);
     font-size: 30px;
     padding: 0 0.5em;
@@ -26,18 +26,19 @@
 
 @media (min-width: 600px) {
     .heroDetails {
-        font-size: 25px;
+        font-size: 50px;
     }
 }
 
 @media (min-width: 1000px) {
     .heroDetails {
-        font-size: 40px;
+        font-size: 80px;
     }
 }
 
 .heroHeadline {
     margin: 0;
+    color: #7AB6FF;
 }
 
 .heroTitle {
