--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -15,6 +15,10 @@ body {
     margin: 0;
 }
 
+link{
+    textDecoration: 'none';
+}
+
 img {
     display: inline-block;
     width: 100%;
@@ -55,6 +59,15 @@ a {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 5vmin;
+}
+
+.category-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: table-row;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-gap: 1vmin;
 }
 
 /**
