--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -1,4 +1,4 @@
-.categoryTitle {
+.previewTitle {
     font-size: 1.5em;
 }
 
@@ -11,4 +11,8 @@
     border-radius: 2px;
     border: 1px solid #A0A0A0;
     margin-right: .5em;
+}
+
+.preview {
+    border-bottom: 1px solid #ddd;
 }
