--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -59,6 +59,8 @@ a {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 5vmin;
+    text-align: center;
+
 }
 
 .category-list {
