--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -26,10 +26,14 @@ img {
     border-radius: 8px;
 }
 
-h1,
+h1 {
+    color: #3D5B80;
+    font-size: 12px;
+}
 h2 {
-    font-size: 2em;
-    font-weight: normal;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #7AB6FF;
 }
 
 h3 {
@@ -87,6 +91,14 @@ a {
     padding: 0 0 0.4em 0;
     margin: 0 0 5vmin 0;
     border-bottom: 1px solid #ddd;
+    color: #3D5B80;
+    font-weight: bold;
+}
+
+.section-bottomLine {
+    padding: 0 0 0.4em 0;
+    margin: 0 0 5vmin 0;
+    border-top: 1px solid #ddd;
     color: #3D5B80;
     font-weight: bold;
 }
