--- a/src/components/category.module.css
+++ b/src/components/category.module.css
@@ -10,3 +10,12 @@
     font-size: 1.125em;
     font-weight: bold;
 }
+
+.categoryImage {
+    /*
+      Ensure golden ratio for the hero size while limiting it to some extend to
+      the viewport width
+    */
+    height: 61.8vh;
+    max-height: 400px;
+}
