--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -26,6 +26,13 @@ img {
     border-radius: 8px;
 }
 
+#instagramImg {
+    display: inline-block;
+    width: 5%;
+    margin: 0;
+    border-radius: 8px;
+}
+
 h1 {
     color: #3D5B80;
     font-size: 12px;
@@ -116,3 +123,4 @@ a {
 .list-inline li {
     display: inline-block;
 }
+
