--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -8,3 +8,10 @@
     font-size: 2em
 
 }
+.instagramIcon {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    border-radius: 8px;
+}
