Alle Bilder sind gleich du hueenen

--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -5,7 +5,7 @@
 .tag {
     color: #A0A0A0;
     text-decoration: none;
-    display: inline-block;
+    display: inline;
     padding: .33333rem .5rem;
     line-height: 1;
     border-radius: 2px;
