--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -9,10 +9,9 @@
     padding: .33333rem .5rem;
     line-height: 1;
     border-radius: 2px;
-    border: 1px solid #A0A0A0;
     margin-right: .5em;
 }
 
 .preview {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1.5px solid #a0337a;
 }
