Viele Kleinigkeiten. Neue Banner. Neue Navigaton. Neue Farben.

--- a/src/components/category-preview.module.css
+++ b/src/components/category-preview.module.css
@@ -1,6 +1,6 @@
 .categoryTitle {
     font-size: 1.5em;
-    color: #7AB6FF;
+    color: #0E76BE;
 }
 
 .tag {
@@ -15,7 +15,7 @@
 }
 
 .preview {
-    border-bottom: 1.5px solid #a0337a;
+    border-bottom: 1.5px solid #373F49;
     margin-top: 2em;
 
 }
