--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -37,17 +37,17 @@ img {
 }
 
 h1 {
-    color: #3D5B80;
+    color: #0E76BE;
     font-size: 12px;
 }
 h2 {
     font-size: 1.5em;
     font-weight: bold;
-    color: #7AB6FF;
+    color: #F1582A;
 }
 
 h3 {
-    color: #3D5B80;
+    color: #0E76BE;;
     font-size: 1em;
     font-weight: bold;
 }
@@ -100,16 +100,15 @@ a {
 .section-headline {
     padding: 0 0 0.4em 0;
     margin: 0 0 5vmin 0;
-    border-bottom: 1px solid #ddd;
-    color: #3D5B80;
+    border-bottom: 1px solid #373F49;
+    color: #F1582A;
     font-weight: bold;
 }
 
 .section-bottomLine {
     padding: 0 0 0.4em 0;
     margin: 0 0 5vmin 0;
-    border-top: 1px solid #ddd;
-    color: #3D5B80;
+    color: #F1582A;
     font-weight: bold;
 }
 
