--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -17,7 +17,7 @@
 
 .heroDetails {
     position: absolute;
-    background: rgb(255, 255, 255, 0.9);
+    background: rgb(241, 88, 42, 0.9);
     left: 50%;
     bottom: 30%;
     transform: translate(-50%, 0);
@@ -40,7 +40,7 @@
 
 .heroHeadline {
     margin: 0;
-    color: #7AB6FF;
+    color: #fff;
 }
 
 .heroTitle {
