--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -7,7 +7,7 @@
     margin-top: 30px;
     height: 20vh;
     max-height: 100px;
-    font-size: 1.00em;
+    font-size: 1.0em;
     color: #3D5B80;
 }
 
@@ -17,4 +17,16 @@
 }
 
 .navigationItem a {
+}
+
+@media (min-width: 300px) {
+    .navigation {
+        font-size: 0.7em;
+    }
+}
+
+@media (min-width: 1000px) {
+    .navigation {
+        font-size: 1.2em;
+    }
 }
