--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -47,7 +47,7 @@ h2 {
 }
 
 h3 {
-    color: #0E76BE;;
+    color: #000;;
     font-size: 1em;
     font-weight: bold;
 }
@@ -57,9 +57,21 @@ a {
 }
 
 .wrapper {
-    width: calc(100% - 10vmin);
+    width: calc(50% - 10vmin);
     margin: 0 auto;
     padding: 5vmin 0;
+}
+
+@media (min-width: 300px) {
+    .wrapper {
+        width: calc(100% - 10vmin);
+    }
+}
+
+@media (min-width: 1920px) {
+    .wrapper {
+        width: calc(50% - 10vmin);
+    }
 }
 
 
@@ -71,10 +83,22 @@ a {
     padding: 0;
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 5vmin;
     text-align: center;
 
+}
+
+@media (min-width: 300px) {
+    .article-list {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+}
+
+@media (min-width: 1000px) {
+    .article-list {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
 }
 
 .category-list {
@@ -82,7 +106,7 @@ a {
     padding: 0;
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-gap: 1vmin;
     text-align: center;
     align-self: center;
@@ -101,14 +125,14 @@ a {
     padding: 0 0 0.4em 0;
     margin: 0 0 5vmin 0;
     border-bottom: 1px solid #373F49;
-    color: #0E76BE;
+    color: #000;
     font-weight: bold;
 }
 
 .section-bottomLine {
     padding: 0 0 0.4em 0;
     margin: 0 0 5vmin 0;
-    color: #0E76BE;
+    color: #000;
     font-weight: bold;
 }
 
