--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -3,12 +3,10 @@
     justify-content: center;
     list-style: none;
     padding: 0;
-    margin: 0;
-    margin-top: 30px;
-    height: 20vh;
+    margin-top: 3em;
     max-height: 100px;
     font-size: 1.0em;
-    color: #3D5B80;
+    color: #000;
 }
 
 .navigationItem {
@@ -27,6 +25,6 @@
 
 @media (min-width: 1000px) {
     .navigation {
-        font-size: 1.2em;
+        font-size: 1.8em;
     }
 }
