Neues Content Model - articles ist implementiert und alle blog posts wurden als article geschrieben.

--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -15,3 +15,13 @@
 .preview {
     border-bottom: 1.5px solid #3D5B80;
 }
+
+.description {
+    font-size: 1em;
+}
+
+h3 {
+    color: #000;;
+    font-size: 2em;
+    font-weight: bold;
+}
