--- a/src/components/picture.module.css
+++ b/src/components/picture.module.css
@@ -8,7 +8,19 @@
 
 .pictureImg {
     max-height: 800px;
-    max-width: 80%;
+    max-width: 100%;
+}
+@media (min-width: 300px) {
+    .pictureImg {
+        width: 100%
+    }
+}
+
+@media (min-width: 1600px) {
+    .pictureImg {
+        width: 60%
+    }
+
 }
 
 .p {
