--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -25,8 +25,8 @@ Link {
 
 img {
     display: inline-block;
-    width: 100%;
-    margin: 0;
+    width: 50%;
+    margin: 0em;
     border-radius: 8px;
 }
 
@@ -72,14 +72,17 @@ a {
         width: calc(80% - 10vmin);
     }
     p{
-        font-size: 1.0em
+        font-size: 1.0em;
     }
     h1{
         font-size: 1.0em;
         font-weight: bold;
     }
     h2{
-        font-size: 1.5em
+        font-size: 1.5em;
+    }
+    img{
+        width: 100%;
     }
 }
 
@@ -96,6 +99,9 @@ a {
     }
     h2{
         font-size: 3em
+    }
+    img{
+        width: 60%;
     }
 }
 
