--- a/src/components/category-preview.module.css
+++ b/src/components/category-preview.module.css
@@ -1,5 +1,5 @@
 .categoryTitle {
-    font-size: 1.5em;
+    font-size: 3em;
     color: #000;
 }
 
@@ -15,8 +15,6 @@
 }
 
 .preview {
-    border-bottom: 1.5px solid #373F49;
-    margin-top: 2em;
-
+    margin-top: 2;
 }
 
