--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -3,32 +3,38 @@
     justify-content: center;
     list-style: none;
     padding: 0;
+    margin: 0;
+    height: 20vh;
     max-height: 100px;
-    font-size: 1.0em;
-    color: #000;
+    font-size: 3em;
+    font-weight: bold;
 }
 
 .navigationItem {
     display: inline-flex;
     align-items: center;
+    margin: 1em;
 }
 
 .navigationItem a {
+    color: currentColor;
+    text-decoration: none;
 }
 
-@media (min-width: 300px) {
-    .navigation {
-        font-size: 0.7em;
+@media only screen and (min-width: 300px) {
+    .navigation{
+        font-size: 1.2em
     }
 }
 
-@media (min-width: 1000px) {
-    .navigation {
-        font-size: 1.8em;
+@media only screen and (min-width: 700px) {
+    .navigation{
+       font-size: 2em
     }
 }
 
-
-
-
-
+@media only screen and (min-width: 1000px) {
+    .navigation {
+        font-size: 3em
+    }
+}
