--- a/src/components/picture.module.css
+++ b/src/components/picture.module.css
@@ -10,6 +10,7 @@
     max-height: 800px;
     max-width: 100%;
 }
+
 @media (min-width: 300px) {
     .pictureImg {
         width: 100%
@@ -23,6 +24,8 @@
 
 }
 
-.p {
-    width: 100%
+.p img {
+    width: 50%;
+    margin: 2em 25%;
 }
+
