--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -30,7 +30,7 @@ img {
     border-radius: 8px;
 }
 
-#instagramImg  {
+#instagramImg {
     width: 125px;
     height: 125px;
 }
@@ -46,13 +46,13 @@ h1 {
 }
 
 h2 {
-    font-size: 2.5em;
+    font-size: 5em;
     font-weight: bold;
-    color: #f1582a;
+    color: white;
 }
 
 h3 {
-    color: #000;;
+    color: #fff;
     font-size: 3em;
     font-weight: bold;
 }
@@ -63,7 +63,7 @@ a {
 
 .wrapper {
     width: calc(50% - 10vmin);
-    margin: 0 auto;
+    margin: 0em auto;
     padding: 5vmin 0;
 }
 
@@ -71,17 +71,21 @@ a {
     .wrapper {
         width: calc(80% - 10vmin);
     }
-    p{
+
+    p {
         font-size: 1.0em;
     }
-    h1{
+
+    h1 {
         font-size: 1.0em;
         font-weight: bold;
     }
-    h2{
-        font-size: 1.5em;
+
+    h2 {
+        font-size: 1em;
     }
-    img{
+
+    img {
         width: 100%;
     }
 }
@@ -90,17 +94,21 @@ a {
     .wrapper {
         width: calc(60% - 10vmin);
     }
-    p{
+
+    p {
         font-size: 1.5em
     }
-    h1{
+
+    h1 {
         font-size: 2.5em;
         font-weight: bold;
     }
-    h2{
+
+    h2 {
         font-size: 3em
     }
-    img{
+
+    img {
         width: 60%;
     }
 }
@@ -136,7 +144,7 @@ a {
     margin: 0;
     padding: 0;
     list-style: none;
-    display: grid;
+    display: list-item;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 1vmin;
     text-align: center;
@@ -180,4 +188,70 @@ a {
 .list-inline li {
     display: inline-block;
 }
+
+button {
+    background-color: #f1582a;
+    position: fixed;
+    z-index: 200;
+    width: 20%;
+    height: 10%;
+    bottom: 2rem;
+    right: 2rem;
+    border-radius: 50%;
+    border-color: #f1582a;
+
+}
+/**
+ * navBar
+ */
+
+.navButton{
+    width: 128px;
+    height: 128px;
+    position: fixed;
+    right: 2em;
+    bottom: 2em;
+}
+
+@media (min-width: 320px) {
+    .navButton {
+        width: 110px;
+        height: 110px;
+    }
+}
+
+/**
+    social bar
+ */
+
+.socialBar{
+    left: 0%;
+    position: absolute;
+    margin: 0 auto;
+    width: 5em;
+    height: 2em;
+
+}
+
+.article-box{
+}
+
+.socialIcon
+{
+    height: 25px;
+    width: 25px;
+    margin: 0.5em;
+}
+
+@media (min-width: 1200px) {
+    .socialIcon {
+        height: 75px;
+        width: 75px;
+    }
+    .socialBar{
+        left: 0%;
+        position: absolute;
+    }
+}
+
 
