--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,40 +1,13 @@
-.footer {
+
+.footerBox{
+    justify-content: space-evenly;
+    height: 4em;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    position: absolute;
+    bottom: 0;
+    color: white;
+    flex-direction: row;
     display: flex;
-    justify-content: center;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    height: 20vh;
-    max-height: 100px;
-    font-size: 3em;
-    font-weight: bold;
-}
-
-.footerItem {
-    display: inline-flex;
-    align-items: center;
-    margin: 1em;
-}
-
-.footerItem a {
-    color: currentColor;
-    text-decoration: none;
-}
-
-@media only screen and (min-width: 300px) {
-    .footer{
-        font-size: 1.2em
-    }
-}
-
-@media only screen and (min-width: 700px) {
-    .footer{
-       font-size: 2em
-    }
-}
-
-@media only screen and (min-width: 1000px) {
-    .footer {
-        font-size: 3em
-    }
+    font-size: 0.5em;
 }
