--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -10,17 +10,17 @@ body {
     font-family: "Avenir", Tahoma, Arial, Helvetica, sasns-serif;
     font-size: 1em;
     line-height: 1.65;
-    color: #373F49;
+    color: black;
     background: #fff;
     margin: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 p {
-    font-size: 1.5em;
-}
-
-Link {
-    textDecoration: 'none';
+    font-size: 1em;
 }
 
 img {
@@ -41,19 +41,19 @@ img {
 }
 
 h1 {
-    color: #000000;
+    color: black;
     font-size: 2em;
 }
 
 h2 {
-    font-size: 5em;
+    font-size: 3em;
     font-weight: bold;
     color: white;
 }
 
 h3 {
-    color: #fff;
-    font-size: 3em;
+    color: black;
+    font-size: 2em;
     font-weight: bold;
 }
 
@@ -62,19 +62,45 @@ a {
 }
 
 .wrapper {
-    width: calc(50% - 10vmin);
-    margin: 0em auto;
+    width: calc(90% - 10vmin);
+    margin: 5em auto;
+}
+
+.wrapper--index{
+    width: calc(90% - 10vmin);
+
+}
+
+.article-wrapper {
+    width: calc(60% - 10vmin);
+    margin: 5em auto;
     padding: 5vmin 0;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .container {
     background: #fff;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 100vh;
 }
 
-@media (min-width: 300px) {
+@media (max-width: 992px) {
     .wrapper {
-        width: calc(80% - 10vmin);
+        width: calc(90% - 10vmin);
+    }
+
+    .wrapper-index{
+        width: calc(90% - 10vmin);
+    }
+
+    .article-wrapper {
+        width: calc(90% - 10vmin);
     }
 
     p {
@@ -82,39 +108,27 @@ a {
     }
 
     h1 {
-        font-size: 1.0em;
+        font-size: 1.5em;
         font-weight: bold;
+        color: black;
+
     }
 
     h2 {
-        font-size: 1em;
+        font-size: 1.5em;
+        font-weight: bold;
+        color: black;
+
+    }
+
+    h3 {
+        color: black;
+        font-size: 1.5em;
+        font-weight: bold;
     }
 
     img {
         width: 100%;
-    }
-}
-
-@media (min-width: 1600px) {
-    .wrapper {
-        width: calc(60% - 10vmin);
-    }
-
-    p {
-        font-size: 1.5em
-    }
-
-    h1 {
-        font-size: 2.5em;
-        font-weight: bold;
-    }
-
-    h2 {
-        font-size: 3em
-    }
-
-    img {
-        width: 60%;
     }
 }
 
@@ -123,7 +137,7 @@ a {
  * article grid
  */
 .article-list {
-    margin: 0;
+    margin-top: 3em;
     padding: 0;
     list-style: none;
     display: grid;
@@ -146,15 +160,30 @@ a {
 }
 
 .category-list {
-    margin: 0;
-    padding: 0;
     list-style: none;
-    display: list-item;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-gap: 1vmin;
     text-align: center;
-    align-self: center;
-    align-items: center;
+    align-self: flex-start;
+    align-items: flex-start;
+    padding: 0;
+}
+
+@media (max-width: 992px) {
+    .category-list {
+        list-style: none;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        grid-gap: 1vmin;
+        text-align: center;
+        align-self: center;
+        align-items: center;
+        padding: 0;
+    }
+}
+
+.category-list li {
+    display: inline;
+    padding: 0 20px;
 }
 
 .catbox {
@@ -194,55 +223,22 @@ a {
     display: inline-block;
 }
 
-button {
-    background-color: #f1582a;
-    position: fixed;
-    z-index: 200;
-    width: 20%;
-    height: 10%;
-    bottom: 2rem;
-    right: 2rem;
-    border-radius: 50%;
-    border-color: #f1582a;
-
-}
-/**
- * navBar
- */
-
-.navButton{
-    width: 128px;
-    height: 128px;
-    position: fixed;
-    right: 2em;
-    bottom: 2em;
-}
-
-@media (min-width: 320px) {
-    .navButton {
-        width: 110px;
-        height: 110px;
-    }
-}
-
 /**
     social bar
  */
 
-.socialBar{
-    left: 0%;
+.socialBar {
+    left: 0;
     position: absolute;
     margin: 0 auto;
     width: 5em;
     height: 2em;
-
 }
 
-.article-box{
+.article-box {
 }
 
-.socialIcon
-{
+.socialIcon {
     height: 25px;
     width: 25px;
     margin: 0.5em;
@@ -253,10 +249,42 @@ button {
         height: 75px;
         width: 75px;
     }
-    .socialBar{
+
+    .socialBar {
         left: 0%;
         position: absolute;
     }
 }
+
+iframe {
+    width: 100%;
+    height: 100%;
+}
+
+@media (max-width: 992px) {
+    iframe {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+    }
+}
+
+.iframe-box {
+    height: 500px;
+    background-color: #2F3336;
+    width: 100%;
+    margin: 50px 0;
+}
+
+@media (max-width: 992px) {
+    .iframe-box {
+        height: 175px;
+        margin-top: 35px;
+    }
+}
+
+
+
+
 
 
