--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -46,9 +46,9 @@ h1 {
 }
 
 h2 {
-    font-size: 3em;
+    font-size: 1em;
     font-weight: bold;
-    color: white;
+    color: black;
 }
 
 h3 {
@@ -115,7 +115,7 @@ a {
     }
 
     h2 {
-        font-size: 1.5em;
+        font-size: 1em;
         font-weight: bold;
         color: black;
 
