--- a/src/templates/article.module.css
+++ b/src/templates/article.module.css
@@ -8,14 +8,14 @@
     font-size: 2em;
 }
 
+.body p{
+    font-size: 18px;
+}
+
 .body p img{
     width: 80%;
     display: block;
     margin: auto;
-}
-
-.body p {
-    text-align: center;
 }
 
 .body ol{
@@ -23,8 +23,14 @@
     text-align: center;
 }
 
+.body h1{
+    text-align: left;
+}
+
 .body h2{
-    text-align: center;
+    text-align: left;
+    font-size: 24px;
+    color: #3D5B80;
 }
 
 .body h3{
@@ -32,7 +38,8 @@
 }
 
 .title {
-    text-align: center;
+    text-align: left;
+    padding-bottom: 20px;
 }
 
 .body a {
