--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -7,7 +7,7 @@
     color: #fff;
     background-color: #373F49;
     width: 100%;
-    border-bottom: 4px solid #1F5A73;
+    border-bottom: 4px solid orange;
     height: 100px;
     top: 0;
     left: 0;
@@ -23,9 +23,4 @@
     font-size: 36px;
     align-self: center;
 }
-
-.links:hover {
-    color: mediumturquoise;
-}
-
 
