--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -26,7 +26,7 @@ p {
 img {
     display: inline-block;
     width: 50%;
-    margin: 0em;
+    margin: 0;
     border-radius: 8px;
 }
 
@@ -251,35 +251,8 @@ a {
     }
 
     .socialBar {
-        left: 0%;
+        left: 0;
         position: absolute;
-    }
-}
-
-iframe {
-    width: 100%;
-    height: 100%;
-}
-
-@media (max-width: 992px) {
-    iframe {
-        width: 100%;
-        height: 100%;
-        padding: 0;
-    }
-}
-
-.iframe-box {
-    height: 500px;
-    background-color: #2F3336;
-    width: 100%;
-    margin: 50px 0;
-}
-
-@media (max-width: 992px) {
-    .iframe-box {
-        height: 175px;
-        margin-top: 35px;
     }
 }
 
@@ -287,10 +260,74 @@ iframe {
     margin-top: 2em;
 }
 
-.Laura-title{
-    color: pink;
-    font-size: 40px;
+.social-icons-top {
+    display: flex;
+    justify-content: center;
 }
+
+.home-title {
+    color: white;
+}
+
+.home-title:hover {
+    text-decoration: underline mediumturquoise;
+}
+
+/* KONTAKT PAGE */
+
+.wrapper label{
+    padding-right: 10px;
+    display: inline-block;
+    font-size: 18px;
+    margin-top: 10px;
+}
+
+.checkbox-container{
+    padding-top: 10px;
+}
+
+.checkbox-container input{
+    display: inline;
+}
+
+.checkbox-container label{
+    display: inline;
+    padding-left: 4px;
+}
+
+input[type=text]{
+    padding: 6px;
+    font-size: 14px;
+}
+
+input[type=email]{
+    padding: 6px;
+    font-size: 14px;
+}
+
+input[type=submit]{
+    margin-top: 12px;
+    width: auto;
+    font-size: 18px;
+    padding: 6px 8px;
+    background-color: orange;
+    color: white;
+    border: 0 solid white;
+}
+
+input[type=submit]:hover{
+    background-color: darkorange;
+}
+
+textarea {
+    width: 300px;
+    height: 100px;
+    font-size: 14px;
+    padding: 6px;
+}
+
+
+
 
 
 
