--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -1,11 +1,11 @@
 .previewTitle {
-    font-size: 1.5em;
     color: black;
     display: block; /* or inline-block */
     text-overflow: ellipsis;
     word-wrap: break-word;
     overflow: hidden;
     text-align: center;
+    margin-bottom: 0;
 }
 
 .tag {
@@ -33,4 +33,5 @@
     max-height: 10em;
     line-height: 1.8em;
     text-align: center;
+    margin: 0;
 }
