--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -14,8 +14,13 @@
     width: 100%;
 }
 
-.impressum {
+.footerItem {
     color: white;
+    padding: 0 2em;
+}
+
+.footerItem:hover {
+    text-decoration: underline mediumturquoise;
 }
 
 .impressum:hover {
@@ -26,22 +31,28 @@ a {
     text-decoration: none;
 }
 
-@media (max-width: 992px) {
-    .footerBox {
-        font-size: 2em;
-    }
-}
-
-.link {
-    font-size: 2em;
-}
-
-@media (max-width: 992px) {
-    .link {
-        font-size: 1em;
-    }
+.links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
 }
 
 .social {
+    display: flex;
+    width: 50%;
     padding-bottom: 32px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+@media (max-width: 992px) {
+    .footerItem {
+        color: white;
+        padding: 1em;
+    }
+
+    .links {
+        font-size: 1em;
+    }
 }
