--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -6,6 +6,38 @@
     font-display: swap;
 }
 
+.intro-text-container {
+    width: calc(60% - 10vmin);
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: justify;
+}
+
+.intro-text-container .intro-text {
+    font-style: italic;
+    margin-top: 0;
+}
+
+.social-icons-dekstop {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    padding: 1.5em 0 0 0;
+}
+
+.navigation-index {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.navigation-index .navigation-index-item {
+    padding: 10px;
+    font-size: 2em;
+}
+
 body {
     font-family: "Avenir", Tahoma, Arial, Helvetica, sasns-serif;
     font-size: 1em;
@@ -28,33 +60,6 @@ img {
     width: 50%;
     margin: 0;
     border-radius: 8px;
-}
-
-#instagramImg {
-    width: 125px;
-    height: 125px;
-}
-
-#bfImg {
-    width: 125px;
-    height: 125px;
-}
-
-h1 {
-    color: black;
-    font-size: 2em;
-}
-
-h2 {
-    font-size: 1em;
-    font-weight: bold;
-    color: black;
-}
-
-h3 {
-    color: black;
-    font-size: 2em;
-    font-weight: bold;
 }
 
 a {
@@ -90,7 +95,22 @@ a {
     min-height: 100vh;
 }
 
+.social-icons-desktop {
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+    padding: 1.5em;
+}
+
+.social-icons-mobile {
+    display: none;
+}
+
 @media (max-width: 992px) {
+
+    .intro-text-container{
+        width: calc(95% - 10vmin);
+    }
     .wrapper {
         width: calc(90% - 10vmin);
     }
@@ -107,28 +127,25 @@ a {
         font-size: 1.0em;
     }
 
-    h1 {
-        font-size: 1.5em;
-        font-weight: bold;
-        color: black;
-
-    }
-
-    h2 {
-        font-size: 1em;
-        font-weight: bold;
-        color: black;
-
-    }
-
-    h3 {
-        color: black;
-        font-size: 1.5em;
-        font-weight: bold;
-    }
-
     img {
         width: 100%;
+    }
+
+    .navigation-index .navigation-index-item {
+        padding: 10px;
+        font-size: 1em;
+    }
+
+
+    .social-icons-mobile {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+        padding: 1.5em;
+    }
+
+    .social-icons-desktop {
+       display: none;
     }
 }
 
@@ -144,7 +161,6 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     grid-gap: 10vmin;
     text-align: center;
-
 }
 
 @media (min-width: 300px) {
@@ -155,29 +171,29 @@ a {
 
 @media (min-width: 1000px) {
     .article-list {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
 }
 
 .category-list {
-    list-style: none;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-gap: 1vmin;
-    text-align: center;
-    align-self: flex-start;
-    align-items: flex-start;
+    margin-top: 3em;
     padding: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-gap: 10vmin;
+    text-align: center;
 }
 
-@media (max-width: 992px) {
+@media (min-width: 300px) {
     .category-list {
-        list-style: none;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-        grid-gap: 1vmin;
-        text-align: center;
-        align-self: center;
-        align-items: center;
-        padding: 0;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+}
+
+@media (min-width: 1000px) {
+    .category-list {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
 }
 
@@ -235,42 +251,47 @@ a {
     height: 2em;
 }
 
+.socialIcon{
+    padding: 5px;
+}
+
 .article-box {
-}
-
-.socialIcon {
-    height: 25px;
-    width: 25px;
-    margin: 0.5em;
-}
-
-@media (min-width: 1200px) {
-    .socialIcon {
-        height: 75px;
-        width: 75px;
-    }
-
-    .socialBar {
-        left: 0;
-        position: absolute;
-    }
 }
 
 .header_title{
     margin-top: 2em;
 }
 
-.social-icons-top {
-    display: flex;
-    justify-content: center;
+
+.home-title-container {
+    background-color: #000;
+    height: auto;
+    padding: 1em 3em;
+    margin: 2em;
+    transition: transform 0.6s;
+}
+
+@media (max-width: 374px) {
+    .home-title-container {
+        padding: 1em 1em;
+    }
 }
 
 .home-title {
     color: white;
+    margin: 0;
+    transition: transform 0.5s;
 }
 
-.home-title:hover {
-    text-decoration: underline mediumturquoise;
+@media (min-width: 992px) {
+    .home-title:hover {
+        transform: scale(1.3);
+        margin: 0;
+    }
+
+    .home-title-container:hover {
+        transform: scale(1.3);
+    }
 }
 
 /* KONTAKT PAGE */
@@ -324,8 +345,6 @@ textarea {
     font-size: 14px;
     padding: 6px;
 }
-
-
 
 
 
