--- a/src/templates/article.module.css
+++ b/src/templates/article.module.css
@@ -10,6 +10,7 @@
 
 .body p{
     font-size: 18px;
+    text-align: justify;
 }
 
 .body p img{
@@ -40,8 +41,25 @@
 .title {
     text-align: left;
     padding-bottom: 20px;
+    margin-top: 0;
 }
 
 .body a {
     text-decoration: underline #1F5A73;
+}
+
+.breadcrumb {
+    list-style: circle;
+    font-size: 24px;
+    padding: 5px;
+    margin-top: 18px;
+}
+
+.breadcrumb:hover {
+    text-decoration: underline mediumturquoise;
+}
+
+.author {
+    font-weight: bold;
+    font-size: 18px;
 }
