text justify overflow hidden

--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -32,6 +32,6 @@
     overflow: hidden;
     max-height: 10em;
     line-height: 1.8em;
-    text-align: center;
+    text-align: justify;
     margin: 0;
 }
