--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -161,7 +161,7 @@ a {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     grid-gap: 10vmin;
-    text-align: center;
+    text-align: justify;
 }
 
 @media (min-width: 300px) {
@@ -183,7 +183,7 @@ a {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     grid-gap: 10vmin;
-    text-align: center;
+    text-align: justify;
 }
 
 @media (min-width: 300px) {
