--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -4,10 +4,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    color: #fff;
-    background-color: #373F49;
+    color: #000;
+    background-color: #fff;
     width: 100%;
-    border-bottom: 4px solid orange;
+    border-bottom: 4px solid black;
     height: 100px;
     top: 0;
     left: 0;
