--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #fff;
+    color: black;
     background-color: #fff;
     position: relative;
     border-top: 4px solid black;
@@ -48,7 +48,7 @@ a {
 
 @media (max-width: 992px) {
     .footerItem {
-        color: white;
+        color: black;
         padding: 1em;
     }
 
