--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -7,7 +7,7 @@
     color: black;
     background-color: #fff;
     position: relative;
-    border-top: 4px solid black;
+    border-top: 4px solid white;
     bottom: 0;
     left: 0;
     flex-wrap: wrap;
