--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -57,13 +57,17 @@ p {
 
 img {
     display: inline-block;
-    width: 50%;
+    width: 100%;
     margin: 0;
     border-radius: 8px;
 }
 
 a {
     color: currentColor;
+}
+
+.banner-image-mobile {
+    display: none;
 }
 
 .wrapper {
@@ -147,6 +151,14 @@ a {
 
     .social-icons-desktop {
        display: none;
+    }
+
+    .banner-image-desktop {
+        display: none;
+    }
+
+    .banner-image-mobile {
+        display: block;
     }
 }
 
