--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -8,6 +8,10 @@
     margin-bottom: 0;
 }
 
+.previewTitle:hover{
+    text-decoration: underline mediumturquoise;
+}
+
 .tag {
     color: #A0A0A0;
     text-decoration: none;
