--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -1,13 +1,13 @@
 .navigation {
     display: flex;
-    position: fixed;
+    position: absolute;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     color: #000;
     background-color: #fff;
     width: 100%;
-    border-bottom: 4px solid black;
+    border-bottom: 2px solid grey;
     height: 100px;
     top: 0;
     left: 0;
