--- a/src/templates/article.module.css
+++ b/src/templates/article.module.css
@@ -8,33 +8,35 @@
     font-size: 2em;
 }
 
-.body p{
+.body p {
     font-size: 18px;
     text-align: justify;
 }
 
 .body p img{
-    width: 80%;
+    object-fit: cover;
+    width: 100%;
+    max-height: 300px;
     display: block;
     margin: auto;
 }
 
-.body ol{
+.body ol {
     padding-left: 0;
     text-align: center;
 }
 
-.body h1{
+.body h1 {
     text-align: left;
 }
 
-.body h2{
+.body h2 {
     text-align: left;
     font-size: 24px;
-    color: #3D5B80;
+    color: crimson;
 }
 
-.body h3{
+.body h3 {
     text-align: center;
 }
 
@@ -45,7 +47,7 @@
 }
 
 .body a {
-    text-decoration: underline #1F5A73;
+    text-decoration: underline crimson;
 }
 
 .breadcrumb {
