--- a/src/templates/article.module.css
+++ b/src/templates/article.module.css
@@ -33,7 +33,7 @@
 .body h2 {
     text-align: left;
     font-size: 24px;
-    color: crimson;
+    color: rgb(110, 110, 110);
 }
 
 .body h3 {
@@ -51,14 +51,13 @@
 }
 
 .breadcrumb {
-    list-style: circle;
     font-size: 24px;
     padding: 5px;
     margin-top: 18px;
 }
 
 .breadcrumb:hover {
-    text-decoration: underline mediumturquoise;
+    text-decoration: underline crimson;
 }
 
 .author {
