--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -36,6 +36,6 @@
     overflow: hidden;
     max-height: 10em;
     line-height: 1.8em;
-    text-align: justify;
+    text-align: left;
     margin: 0;
 }
