--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -36,7 +36,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    text-align: justify;
+    text-align: left;
 }
 
 .intro-text-container .intro-text {
@@ -158,7 +158,7 @@ a {
     }
 
     p {
-        font-size: 1.0em;
+        font-size: 1.2em;
     }
 
     img {
