--- a/src/components/category-preview.module.css
+++ b/src/components/category-preview.module.css
@@ -8,7 +8,13 @@
 }
 
 .categoryTitle {
-    text-align: left;
+    color: black;
+    display: block; /* or inline-block */
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    overflow: hidden;
+    text-align: center;
+    margin-bottom: 0;
 }  
 
 .categoryTitle:hover{
@@ -18,7 +24,5 @@
 @media (max-width: 992px) {
     .categoryTitle {
         font-size: 2em;
-        color: #2F3336;
-        display: inline;
     }
 }
