--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -7,20 +7,16 @@
 }
 
 .bergfreunde-dynamic-mobile { 
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 40px;
 }
 
-@media (min-width: 992px) {
-    .bergfreunde-dynamic-mobile {
-        display: none;
-    }
+.bergfreunde-dynamic-mobile a img{ 
+    width: 100%;
+    max-width: 350px;
 }
 
 .intro-text-container {
-    width: calc(60% - 10vmin);
+    width: calc(80% - 10vmin);
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -30,10 +26,12 @@
 .intro-text-container .intro-text {
     font-style: italic;
     margin-top: 0;
+    font-size: 1.2em;
 }
 
 .headline-index {
     text-align: left;
+    font-size: 2.5em;
 }
 
 .social-icons-desktop {
@@ -185,7 +183,7 @@ a {
  * article grid
  */
 .article-list {
-    margin-top: 3em;
+    margin-top: 2.5em;
     padding: 0;
     list-style: none;
     display: grid;
@@ -196,7 +194,7 @@ a {
 
 @media (min-width: 300px) {
     .article-list {
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     }
 }
 
@@ -224,7 +222,7 @@ a {
 
 @media (min-width: 300px) {
     .category-list {
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     }
 }
 
