--- a/src/templates/article.module.css
+++ b/src/templates/article.module.css
@@ -14,9 +14,9 @@
 }
 
 .body p img{
-    object-fit: cover;
+    max-width: 600px;
     width: 100%;
-    max-height: 300px;
+    height: auto;
     display: block;
     margin: auto;
 }
